--- a/README
+++ b/README
@@ -3,6 +3,17 @@ RPCHook是一个基于Http的RPC异步消息中间件,主要用于降低基于so
 RPCHook可以解决因引入各种消息中间件所带来的原系统代码污染,只需在原有系统上添加一些远程接口.
 RPCHook实现了基础的MQ系统的功能,保证消息不丢失 但不保证有序到达. 其采用了推模式主动向目标地址发送消息, 不需要Customer端.
 
+#RPCHook技术实现:
+swoole(v1.9+) + ssdb
+
+#布署方法:
+php server.php #请使用后台模式运行 监听端口自行设置, 支持多机布署 前端请采用nginx反向代理实现高可用高并发
+php watcher.php #请采用Nodejs高大上的布署方式pm2 做守护进程 ,这个脚本只支持单例布署.一般只在宕机 或远程RPC服务失败的情况下这个脚本才工作
+ssdb为了实现高并发高可用 请使用redis的集群布署方式,并使用twemproxy布署
+
+# 并发性能:
+swoole_server异步并发性能接近nginx的并发性能, ssdb写性能率低于redis
+
 # 适用场合:
 比较适用于在同一局域网中的基于Http服务的子系统间进行消息转发. 也可用于广域网中各系统间的消息转发,请自行做好数据包的安全工作.
 
